--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "line-bot-sdk>=3.0",
     "openai>=2.14.0",
     "pydantic-settings>=2.12.0",
+    "pyyaml>=6.0",
     "sqlalchemy>=2.0.45",
     "uvicorn[standard]>=0.40.0",
 ]
@@ -26,3 +27,6 @@ dev = [
     "pytest-asyncio>=1.3.0",
     "ruff>=0.14.10",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
