--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi>=0.128.0",
     "google-generativeai>=0.8.6",
     "gunicorn>=23.0.0",
+    "jinja2>=3.1.4",
     "line-bot-sdk>=3.0",
     "openai>=2.14.0",
     "pydantic-settings>=2.12.0",
