--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
       - name: Install dependencies
         run: uv sync --all-extras --dev
 
+      - name: Run Linting
+        run: |
+          uv run ruff check .
+          uv run ruff format . --check
+
       - name: Run Unit Tests
         run: uv run pytest tests/unit
         env:
