--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,10 @@ jobs:
           uv run ruff check .
           uv run ruff format . --check
 
+      - name: Run Type Checking
+        run: uv run mypy . --ignore-missing-imports || true
+        continue-on-error: true
+
       - name: Run Unit Tests
         run: uv run pytest tests/unit
         env:
