--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ testpaths = ["tests"]
 line-length = 120
 
 [tool.ruff.lint]
-ignore = ["E402", "F401", "E701", "F403"]
+select = ["E", "F", "I"]
+ignore = ["E402", "F401", "E701", "F403", "E501"]
 
 [tool.mypy]
 files = "."
